techpack: audio: vili-r-oss
Change-Id: Iad7af3c30f27b25cc0a99485e98dec9fbadf33d1

--- a/techpack/audio/dsp/Kbuild
+++ b/techpack/audio/dsp/Kbuild
@@ -261,6 +261,11 @@ ifeq ($(TARGET_PRODUCT), renoir)
 	CDEFINES += -DTFA_NON_DSP_SOLUTION
 endif
 
+ifeq ($(TARGET_PRODUCT), mona)
+	CDEFINES += -DCONFIG_SND_SOC_AW88263S_TDM
+	CDEFINES += -DCONFIG_TARGET_PRODUCT_MONA
+endif
+
 ifeq ($(TARGET_PRODUCT), lisa)
 	CDEFINES += -DCONFIG_SND_SOC_TFA9874_FOR_DAVI
 	CDEFINES += -DTFA_NON_DSP_SOLUTION
