--- a/techpack/audio/asoc/Kbuild
+++ b/techpack/audio/asoc/Kbuild
@@ -283,12 +283,24 @@ ifeq ($(TARGET_PRODUCT), odin)
 	CDEFINES += -DCONFIG_TARGET_PRODUCT_ODIN
 endif
 
+ifeq ($(TARGET_PRODUCT), vili)
+	CDEFINES += -DCONFIG_TARGET_PRODUCT_CS35L41_TDM
+	CDEFINES += -DCONFIG_AUDIO_UART_DEBUG
+	CDEFINES += -DCONFIG_TARGET_PRODUCT_VILI
+endif
+
 ifeq ($(TARGET_PRODUCT), renoir)
 	CDEFINES += -DCONFIG_SND_SOC_TFA9874
 	CDEFINES += -DCONFIG_SND_SOC_TFA9874_DAVI_I2S
 	CDEFINES += -DTFA_NON_DSP_SOLUTION
 	CDEFINES += -DCONFIG_TARGET_PRODUCT_RENOIR
 	CDEFINES += -DQCOM_HAPTIC_BOB
+endif
+
+ifeq ($(TARGET_PRODUCT), mona)
+	CDEFINES += -DCONFIG_AUDIO_UART_DEBUG
+	CDEFINES += -DCONFIG_SND_SOC_AW88263S_TDM
+	CDEFINES += -DCONFIG_TARGET_PRODUCT_MONA
 endif
 
 ifeq ($(TARGET_PRODUCT), lisa)
