--- a/drivers/input/Makefile
+++ b/drivers/input/Makefile
@@ -45,3 +45,8 @@ ifeq ($(TARGET_PRODUCT), haydn)
     KBUILD_CPPFLAGS += -DQCOM_HAPTIC_F0_PROTECT
     KBUILD_CPPFLAGS += -DCONFIG_TARGET_PRODUCT_HAYDN
 endif
+
+ifeq ($(TARGET_PRODUCT), vili)
+    KBUILD_CPPFLAGS += -DQCOM_HAPTIC_F0_PROTECT
+    KBUILD_CPPFLAGS += -DCONFIG_TARGET_PRODUCT_VILI
+endif
